--- a/submit-form.html
+++ b/submit-form.html
@@ -24,7 +24,7 @@
         </div>
         <div>
             <div style="margin-bottom: 10px;">
-            <a href="https://www.imghippo.com/">click here to convert your image into link and paste link choose <span style="color: red;">**</span><strong>embedcodes>directlink</strong><span style="color: red;">**</span></a>
+            <a href="https://img.doerig.dev/">click here to convert your image into link and paste link below</a>
             </div>
             <label for="photo">Profile Photo:</label>
             <input type="text" id="photo" name="photo">
