--- a/submit-form.html
+++ b/submit-form.html
@@ -24,8 +24,8 @@
         </div>
         <div>
             <div style="margin-bottom: 10px;">
-                <a href="https://postimages.org/">1.click here to convert your image into link and paste link below or</a>
-            <a href="https://img.doerig.dev/">click here to convert your image into link and paste link below</a>
+                <a href="https://postimages.org/" target="_blank">1.click here to convert your image into link and paste link below or</a>
+            <a href="https://img.doerig.dev/" target="_blank">click here to convert your image into link and paste link below</a>
             </div>
             <label for="photo">Profile Photo:</label>
             <input type="text" id="photo" name="photo">
